# jome

./: CMakeLists.txt
jome/: CMakeLists.txt  jome.cpp  q-emojis-widget.cpp  q-jome-window.cpp  q-jome-window.hpp  q-wake-up-server.cpp  q-wake-up-server.hpp
jome-wake-up/: CMakeLists.txt  jome-wake-up.cpp  q-wake-up-client.cpp  q-wake-up-client.hpp
